Non-unified build fixes, late-ish December 2021 edition https://bugs.webkit.org/show_bug.cgi?id=234392

Unreviewed non-unified build fixes.

Source/WebCore:

No new tests needed.


* Modules/notifications/NotificationData.h: Add missing wtf/text/WTFString.h and <optional>
header inclusions.
* style/HasSelectorFilter.cpp: Add missing StyleRule.h header inclusion.
* style/HasSelectorFilter.h: Add missing forward declaration for WebCore::Element.
* workers/WorkerConsoleClient.h: Add missing JSC:: namespace prefix to usage of
JSC::MessageType.

Source/WebKit:


* NetworkProcess/NetworkDataTask.cpp: Add missing NetworkProcess.h header inclusion.
* NetworkProcess/NetworkSession.cpp: Add missing WebCore/SWServer.h heeader inclusion.
* UIProcess/Notifications/WebNotificationManagerProxy.cpp: Add missing
WebCore/NotificationData.h header inclusion.



Canonical link: https://commits.webkit.org/245331@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287153 268f45cc-cd09-0410-ab3c-d52691b4dbfc